[package]
name = "oranda"
description = "🎁 generate beautiful landing pages for your projects"
repository = "https://github.com/axodotdev/oranda"
version = "0.0.1"
edition = "2021"
authors = ["Axo Developer Co. <hello@axo.dev>"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "oranda"

[dependencies]
ammonia = "3"
axoasset = { branch = "0.2.0", features = ["json-serde"], git = "https://github.com/axodotdev/axoasset" }
axohtml = "0.5.0"
axoproject = { version = "0.1.0", default-features = false, features = ["cargo-projects", "npm-projects"] }
axum = "0.6.2"
cargo-dist-schema = "=0.0.3"
chrono = "0.4.23"
clap = { version = "4", features = ["derive", "help", "usage", "error-context", "wrap_help"] }
comrak = "0.14"
console = "0.15.5"
fs_extra = "1.3.0"
lazy_static = "1.4.0"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
minifier = "0.2.2"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85" }
syntect = "5.0"
thiserror = "1.0.37"
tokio = { version = "1.20.1", features = ["full"] }
toml = "0.5.9"
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
url = "2.3.1"
camino = "1.1.4"
axocli = "0.1.0"
miette = "5.7.0"
rayon = "1.7.0"
notify = "4"
crossbeam-channel = "0.5.7"

[dev-dependencies]
assert_cmd="2"
assert_fs = "1.0.7"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.0.5"
rust-toolchain-version = "stable"
ci = ["github"]
installers = ["shell", "powershell"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
